syntax = "proto3";

option csharp_namespace = "LLamaServer.AuthGrpc";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
	string accessToken = 1;
	string refreshToken = 2;
	bool success = 3;
	string message = 4;

}
